@@ -1,4 +1,4 @@
-usr/lib/*.so.*.*.*
 usr/lib/*/*.so.*.*.*
-usr/lib/i686/cmov/*.so.*.*.*
-usr/lib/openssl-1.0.0/engines
+usr/lib/*/*/*.so.*.*.*
+usr/lib/*/i686/cmov/*.so.*.*.*
+usr/lib/*/openssl-1.0.0/engines
